<resources>
    <string name="hello">Hello World, LoggingActivity!</string>
    <string name="app_name">云中校车</string>
    <string name="forgetpw">忘记密码?</string>
    <string name="please_input_suername">请输入帐号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="remmberpw">记住密码</string>
    <string name="auto_logging">自动登录</string>
    <string name="logging">登录</string>
    <string name="network_broken">网络不可用，请检查网络连接</string>
    <string name="current_lodding">登录中……</string>
    <string name="current_failed">登录失败，请重试 </string>
    <string name="current_success">登录成功</string>
    <string name="lodding_username_failed">请输入正确的账号及密码！</string>
    <string name="lodding_password_failed">请输入正确的账号及密码！</string>
    <string name="pull_down">下拉刷新</string>
    <string name="pull_up">上拉加载更多</string>
    <string name="loading">载入中....</string>
    <string name="isLoading">正在载入中....</string>
    <string name="out_time">网络不给力哦:(</string>
    <string name="no_streaming_service">您的园所该项服务尚未开通</string>
    <string name="streaming_error">网络不给力或者目前没有视频</string>
    <string name="must_image">必须传入图片</string>
    <string name="no_jiazhang">不是家长操作</string>
    <string name="no_more4">最多设置四个接送人</string>
    <string name="image_fail">图片创建失败</string>
    <string name="detele_pepole_success">成功删除日常接送人！</string>
    <string name="detele_pepole_id">参数id 错误！</string>
    <string name="detele_pepole_no">不能删除 家长没有此id对应头像！</string>
    <string name="get_student_data_fail">获取学生信息失败</string>
    <string name="get_share_data_fail">获取日志信息失败</string>
    <string name="get_notice_data_fail">获取通知信息失败</string>
    <string name="net_is_not_working">网络不可用，请检查网络连接 </string>
    <string name="no_data">无数据</string>
    <string name="recv_data_error">返回数据错误</string>
    <string name="age_field">岁</string>
    <string name="init_view">获取数据中，请稍候……</string>
    <string name="zan">赞</string>
    <string name="comment">评论</string>
    <string name="add_hour_">小时前</string>
    <string name="zan_fail">发送赞失败</string>
    <string name="cancel_zan_fail">取消赞失败</string>
    <string name="class_update_comment_title">评论</string>
    <string name="setting_name">姓名</string>
    <string name="student_class">班级</string>
    <string name="student_school">学校</string>
    <string name="student_service">服务状态</string>
    <string name="student_header_pic">头像</string>
    <string name="student_nickname">昵称</string>
    <string name="student_gender">性别</string>
    <string name="student_birthday">生日</string>
    <string name="student_shuttle">日常接送人</string>
    <string name="student_allergy">过敏等特殊情况</string>
    <string name="back_today">回今天</string>
    <string name="home">主页</string>
    <string name="more">更多</string>
    <string name="myaccount">我的账户</string>
    <string name="teachermessagebox">教师留言箱</string>
    <string name="ipcselection">请选择摄像头</string>
    <string name="cookbook">食谱</string>
    <string name="syllabus">课程表</string>
    <string name="idea">意见反馈</string>
    <string name="new_version">发现新版本</string>
    <string name="about_us">关于我们</string>
    <string name="exit_out">退出登录</string>
    <string name="exit_out_">退出</string>
    <string name="cancel">取消</string>
    <string name="modification">修改</string>
    <string name="oldpw">旧密码</string>
    <string name="newpw">新密码</string>
    <string name="confirm">确认</string>
    <string name="modification_pw">修改密码</string>
    <string name="please_input_old_pw">\t请输入旧密码</string>
    <string name="please_input_new_pw">\t6-24位中英文、数字组合</string>
    <string name="please_input_one_more_ag">\t请再次输入新密码</string>
    <string name="get_cookbook_fail">获取食谱失败</string>
    <string name="get_syllabus_fail">获取课程表失败</string>
    <string name="cookbook_breakfast">早餐</string>
    <string name="cookbook_extra_meal">加餐</string>
    <string name="cookbook_lunch">午餐</string>
    <string name="cookbook_snack">午点</string>
    <string name="cookbook_supper">晚餐</string>
    <string name="no_student_data">无学生信息</string>
    <string name="no_student_school_data">未能获得学校信息</string>
    <string name="boy">男孩</string>
    <string name="girl">女孩</string>
    <string name="xiaoxi">消息</string>
    <string name="detele_tips">删除</string>
    <string name="detele_tips_content">确定删除接送人么？</string>
    <string name="imageStorage">图库</string>
    <string name="no_network_cannt_uploding_image">网络不可用，请检查网络连接.</string>
    <string name="no_network_cannt_uploding_image_outtime">网络连接超时</string>
    <string name="uploding_image_ok">修改头像成功</string>
    <string name="uploding_image_die">修改头像失败</string>
    <string name="nikename">昵称</string>
    <string name="health_titile">特殊情况</string>
    <string name="report_titile">班级报告</string>
    <string name="report_search_titile">搜索结果</string>
    <string name="add_shuttle_title">新增接送人</string>
    <string name="nikename_out_length">昵称过长</string>
    <string name="add_shuttle_success">添加成功</string>
    <string name="no_network_cannt_uploding_nikename">网络不可用，请检查网络连接.</string>
    <string name="modifi_nikename_ok">修改昵称成功</string>
    <string name="modifi_health_ok">修改成功</string>
    <string name="modifi_nikename_fail">修改昵称失败</string>
    <string name="modifi_health_fail">修改失败</string>
    <string name="modifi_gender">修改性别</string>
    <string name="no_network_cannt_modifi_gender">网络不可用，请检查网络连接.</string>
    <string name="no_network_cannt_modifi_gender_outtime">网络连接超时 </string>
    <string name="modifi_gender_fail">修改性别失败</string>
    <string name="no_network_cannt_modifi_birthday">网络不可用，请检查网络连接.</string>
    <string name="no_network_cannt_modifi_birthday_outtime">网络连接超时 </string>
    <string name="modifi_birthday_fail">修改生日失败</string>
    <string name="feekback">意见反馈</string>
    <string name="feekback_content_null">内容不能为空</string>
    <string name="pepole_image_null">头像不能为空</string>
    <string name="net_isnotwork">网络不可用，请检查网络连接.</string>
    <string name="feekback_su">	反馈成功</string>
    <string name="feekback_fail">提交反馈失败</string>
    <string name="check_version">检查新版本中……</string>
    <string name="check_version_result">太棒了，您使用的已是最新版本</string>
    <string name="check_version_no_version">网络不可用，请检查网络连接.</string>
    <string name="check_version_out_time">网络连接超时 </string>
    <string name="loding">下载</string>
    <string name="yun_net">www.yunxiaoche.com</string>
    <string name="guan_net">service@yunxiaoche.com</string>
    <string name="confirm_receipt">确认回执</string>
    <string name="confirm_receipt_success">确认回执成功</string>
    <string name="confirm_receipt_fail">确认回执失败</string>
    <string name="receipt_required">[需回执]</string>
    <string name="pack_up">收起</string>
    <string name="change_bg">更换背景</string>
    <string name="mange_pw">密码管理</string>
    <string name="more_eq">多设备同时在线</string>
    <string name="modifi_pw">修改登录密码</string>
    <string name="modifi_gesture">修改手势密码</string>
    <string name="gesture_pw">手势密码</string>
    <string name="pw_cannt_empty">密码不能为空</string>
    <string name="pw_net_isnot_online">网络不可用，请检查网络连接.</string>
    <string name="pw_net_isnot_eq">新密码两次输入不一致 </string>
    <string name="pw_sucesss">修改密码成功，请重新登录</string>
    <string name="pw_fail">修改密码失败</string>
    <string name="all_notice">全部通知</string>
    <string name="important_notice">重要通知</string>
    <string name="sure_change_pw">退出后不会删除历史数据，下次登录依然可以使用本账号。</string>
    <string name="have_no_new_data">没有更多数据了</string>
    <string name="have_no_native">没有更多数据了</string>
    <string name="have_no_network">网络不可用，请检查网络连接</string>
    <string name="gesture_info">\t\t提醒：为保证您的账户安全，请开启手势密码保护。</string>
    <string name="hulue">忽略</string>
    <string name="kaiqi">开启</string>
    <string name="my_register">我的报名</string>
    <string name="all_register">全部</string>
    <string name="can_register">可报名</string>
    <string name="totalattendance">本月出勤天数  :</string>
    <string name="calendar_normal">已签到</string>
    <string name="calendar_absence">请假</string>
    <string name="actualizar">补登</string>
    <string name="calendar_techerday_normal"></string>
    <string name="calendar_absence_normal">等待考勤数据</string>
    <string name="calendar_title">考勤与校历</string>
    <string name="moring_check_title">晨检与考勤</string>
    <string name="lock_msgprev">密码错误，还可以输入</string>
    <string name="lock_msgend">次</string>
    <string name="lock_headtxt">设置手势密码</string>
    <string name="lock_setgusture">绘制解锁图案</string>
    <string name="lock_setgusture_again">再次绘制解锁图案</string>
    <string name="lock_ungusture">与上一次绘制不一致，请重新绘制</string>
    <string name="lock_success">设置成功</string>
    <string name="lock_number">至少连接4个点，请重新输入</string>
    <string name="minute_befor">分钟前</string>
    <string name="hour_befor">小时前</string>
    <string name="underway">进行中</string>
    <string name="dns">未开始</string>
    <string name="complete">已结束</string>
    <string name="full">已满员</string>
    <string name="activity_content">活动内容</string>
    <string name="activity_content_null">没有数据</string>
    <string name="select_children">请选择孩子</string>
    <string name="select_children_success_1">正在加载数据....</string>
    <string name="select_children_success">选择成功，正在加载信息</string>
    <string name="select_children_fail">选择失败</string>
    <string name="modifi_more_phone_fail">开启多设备在线失败</string>
    <string name="modifi_more_phone_open_success">开启多设备在线成功</string>
    <string name="modifi_more_phone_close_success">关闭多设备在线成功</string>
    <string name="apply_success">报名成功</string>
    <string name="apply_success_">取消报名成功</string>
    <string name="manage_fail">操作失败</string>
    <string name="account_title">我的账户</string>
    <string name="account_account_label">账户名：</string>
    <string name="account_phone_label_not">未绑定手机</string>
    <string name="account_phone_label_yes">已绑定手机：</string>
    <string name="account_children_label_prev">已关联</string>
    <string name="account_children_label_next">个孩子</string>
    <string name="account_phone_text_change">更换</string>
    <string name="account_phone_text_binding">绑定</string>
    <string name="account_label">\t\t绑定手机号码后，您可以使用手机号码作为账户直接登录；当忘记密码时可自主找回。</string>
    <string name="binding_phone_title">绑定手机</string>
    <string name="binding_phone_content">账号绑定手机号码后，手机号码可直接作为账号登录，并可自主找回密码	</string>
    <string name="binding_phone_content_hint">请输入手机号</string>
    <string name="binding_phone_next">下一步</string>
    <string name="binding_phone_label1">请输入之前绑定的手机号码</string>
    <string name="binding_phone_label2">重新绑定之后，原手机号码将不能作为登录凭证</string>
    <string name="binding_phone_label3">请输入新的手机号码</string>
    <string name="setting_children_manager">切换到其他孩子</string>
    <string name="setting_doctory_app">支付宝支付</string>
    <string name="setting_doctory_num">数量</string>
    <string name="setting_doctory_price">价格</string>
    <string name="setting_doctory_account">总价</string>
    <string name="setting_doctory_web">支付宝网页支付</string>
    <string name="setting_doctory_app_tips">推荐有支付宝账号的用户使用</string>
    <string name="setting_doctory_web_tips">支付宝账户支付、银行卡支付</string>
    <string name="setting_class">类型</string>
    <string name="setting_baseinfo">基本信息</string>
    <string name="setting_new">new</string>
    <string name="setting_find_new">发现新版本</string>
    <string name="setting_setting">设置</string>
    <string name="leftsetting_title">设置</string>
    <string name="binding_phone_verification_hint">请输入短信验证码</string>
    <string name="find_pw">找回密码</string>
    <string name="forget_pw_info_">手机号帐号可自主找回密码，该号码不会对其他人公开。</string>
    <string name="please_input_phone_num">请输入手机号</string>
    <string name="input_phone_no_bind_info">未绑定手机帐号请联系客服人员400-606-3996</string>
    <string name="getverification">获取验证码</string>
    <string name="binding_phone_verification_hint_new">点击“获取验证码”按钮获取验证码</string>
    <string name="upload_image">上传图片</string>
    <string name="upload_image_font">您上传的照片只有解答您问题的医生可见</string>
    <string name="camera">拍照</string>
    <string name="photo">从手机相册中选择</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="gender">性别</string>
</resources>