<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@drawable/class_share_top_bg" >

        <Button
            android:id="@+id/back"
            android:layout_width="37dip"
            android:layout_height="37dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dip"
            android:background="@drawable/class_share_main_body_top_selector"
            android:onClick="backMenu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/modification_pw"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <Button
            android:layout_width="37dip"
            android:layout_height="37dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dip"
            android:background="@drawable/right_selector"
            android:onClick="submit" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/top"
        android:background="#F0EDE4" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:text="@string/oldpw"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/old_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dip"
            android:layout_toRightOf="@id/textView1"
            android:background="@drawable/binding_text_bg"
            android:ems="10"
            android:hint="@string/please_input_old_pw"
            android:padding="2dp"
            android:password="true"
            android:singleLine="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/textView1"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:text="@string/newpw"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/new_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dip"
            android:layout_toRightOf="@id/textView2"
            android:background="@drawable/binding_text_bg"
            android:ems="10"
            android:hint="@string/please_input_new_pw"
            android:padding="2dp"
            android:password="true"
            android:singleLine="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/textView2"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:text="@string/confirm"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/new_pw_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dip"
            android:layout_toRightOf="@id/textView3"
            android:background="@drawable/binding_text_bg"
            android:ems="10"
            android:hint="@string/please_input_one_more_ag"
            android:padding="2dp"
            android:password="true"
            android:singleLine="true"
            android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>